--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-    "name": "my-static-web-app",
-    "version": "1.0.0",
-    "scripts": {
-        "build": "tsc"
-    },
-    "devDependencies": {
-        "typescript": "^4.5.5"
-    }
+  "name": "my-static-web-app",
+  "version": "1.0.0",
+  "scripts": {
+    "build": "tsc && copyfiles -u 1 src/index.html dist",
+    "start": "live-server dist"
+  },
+  "devDependencies": {
+    "typescript": "^4.5.5",
+    "live-server": "^1.2.1",
+    "copyfiles": "^2.4.1"
+  }
 }
